--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <h2>ショップ</h2>
             <p>コインを使ってアイテムを買おう！</p>
             <div id="shop-item-grid"></div>
+        </div>
 
         <div id="garden-screen" class="screen">
             <div class="header-nav">
