--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
                 <div id="result-item-area"></div>
                 <button id="close-result-btn">OK</button>
             </div>
+
+        <div id="cat-detail-modal" class="modal-container">
+            <div class="modal-content">
+                <div id="cat-detail-img"></div>
+                <h2 id="cat-detail-name"></h2>
+                <p id="cat-detail-description"></p>
+                <div id="cat-detail-needs"></div>
+                <button id="close-cat-detail-btn">とじる</button>
+            </div>
         </div>
     </div>
 
