--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                 <div id="result-item-area"></div>
                 <button id="close-result-btn">OK</button>
             </div>
+        </div>
 
         <div id="cat-detail-modal" class="modal-container">
             <div class="modal-content">
