--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
                     <button class="field-btn" data-field="chemistry">⚗️ 化学</button>
                 </div>
             </div>
+            <div id="reward-rules">
+                <h3>🏅 ごほうびのルール 🏅</h3>
+                <table>
+                    <tr><th>10問正解</th><td><span class="coin-reward">10</span> コイン</td></tr>
+                    <tr><th>9問正解</th><td><span class="coin-reward">5</span> コイン</td></tr>
+                    <tr><th>7〜8問正解</th><td><span class="coin-reward">2</span> コイン</td></tr>
+                    <tr><th>5〜6問正解</th><td><span class="coin-reward">1</span> コイン</td></tr>
+                </table>
+            </div>
             <button id="start-quiz-btn" class="start-btn">10問チャレンジ！</button>
         </div>
 
